ISIS-2957 upgrade to kvision 5.8.1, Kotlin 1.6.10, changes regarding SVG to accommodate kvision-map update, catch empty BaseAggregator, luxon added in index.html, new approach to visualize Event timing

--- a/incubator/clients/kroviz/src/main/web/index.html
+++ b/incubator/clients/kroviz/src/main/web/index.html
@@ -8,6 +8,8 @@
     <title>kroViz</title>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/diff2html/bundles/css/diff2html.min.css" />
     <script type="text/javascript" src="main.bundle.js"></script>
+    <!-- https://github.com/rjaros/kvision/issues/325 -->
+    <script src="https://cdn.jsdelivr.net/npm/luxon/build/global/luxon.min.js"></script>
 </head>
 <body>
 <!-- Licensed to the Apache Software Foundation (ASF) under one or more contributor
