--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/login/IsisSignInPanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/login/IsisSignInPanel.html
@@ -21,19 +21,19 @@
             <div wicket:id="feedback"></div>
 
             <form wicket:id="signInForm" role="form">
-                <div class="form-group">
+                <div class="form-group mb-3">
                     <label wicket:for="username"><wicket:message key="usernameLabel"/></label>
                     <input type="text" class="form-control isis-username" wicket:id="username" placeholder="Enter username"/>
                 </div>
-                <div class="form-group">
+                <div class="form-group mb-3">
                     <label wicket:for="password"><wicket:message key="passwordLabel"/></label>
                     <input type="password" class="form-control isis-password" wicket:id="password" placeholder="Enter password"/>
                 </div>
-                <div class="form-group">
+                <div class="form-group mb-3">
                     <label wicket:for="timezone"><wicket:message key="timezoneLabel"/></label>
                     <select class="form-control" wicket:id="timezone" name="timezone" data-noreset="true"/>
                 </div>
-                <div class="form-check" wicket:id="rememberMeContainer">
+                <div class="form-check mb-3" wicket:id="rememberMeContainer">
                     <label>
                         <input type="checkbox" wicket:id="rememberMe"/> <wicket:message key="rememberMeLabel"/>
                     </label>
