ISIS-2877: CSS: introduce card format modifier: mini-card

--- a/extensions/vw/fullcalendar/applib/src/main/java/org/apache/isis/extensions/fullcalendar/applib/value/CalendarEvent.html
+++ b/extensions/vw/fullcalendar/applib/src/main/java/org/apache/isis/extensions/fullcalendar/applib/value/CalendarEvent.html
@@ -1,4 +1,4 @@
-<div class="card shadow-sm" style="transform: scale(0.7, 0.7)">
+<div class="card mini-card shadow-sm">
   <h5 class="card-header">${calendar-name}</h5>
   <div class="card-body">
     <h5 class="card-title">${title}</h5>
