--- a/extensions/vw/fullcalendar/applib/src/main/java/org/apache/isis/extensions/fullcalendar/applib/value/CalendarEvent.html
+++ b/extensions/vw/fullcalendar/applib/src/main/java/org/apache/isis/extensions/fullcalendar/applib/value/CalendarEvent.html
@@ -1,5 +1,5 @@
 <div class="card mini-card shadow-sm">
-  <h5 class="card-header">${calendar-name}</h5>
+  <h5 class="card-header" style="background-color: cornsilk;">${calendar-name}</h5>
   <div class="card-body">
     <h5 class="card-title">${title}</h5>
     <h6 class="card-subtitle mb-2 text-muted">${timestamp}</h6>
