--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/entity/EntityPage.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/pages/entity/EntityPage.html
@@ -27,9 +27,11 @@
             <div class="entityPage" wicket:id="entityPageContainer">
                 <div wicket:id="bookmarks"></div>
                  <div wicket:id="whereAmI-container">
-	                <ul class="whereAmI">
-	    				<li wicket:id="whereAmI-items"></li>
-					</ul>
+                 	<nav aria-label="breadcrumb">
+		                <ol class="whereAmI breadcrumb">
+		    				<li wicket:id="whereAmI-items" class="breadcrumb-item"></li>
+						</ol>
+					</nav>
                 </div>
                 <div wicket:id="entity"></div>
             </div>
