--- a/antora/supplemental-ui/index.html
+++ b/antora/supplemental-ui/index.html
@@ -50,15 +50,11 @@
       -->
     </div>
     <div class="social-links float-right">
-      <a href="https://lists.apache.org/list.html?users@isis.apache.org" class="email"><i class="fa fa-at"></i></a>
+      <a href="docs/latest/support/mailing-list.html" class="email"><i class="fa fa-at"></i></a>
       <a href="docs/latest/support/slack-channel.html" class="slack"><i class="fa fa-slack"></i></a>
       <a href="https://issues.apache.org/jira/secure/RapidBoard.jspa?rapidView=87" class="bug"><i class="fa fa-bug"></i></a>
       <a href="https://stackoverflow.com/questions/tagged/isis" class="stackoverflow"><i class="fa fa-stack-overflow"></i></a>
       <a href="https://twitter.com/ApacheIsis" class="twitter"><i class="fa fa-twitter"></i></a>
-      <!--
-              <a href="#" class="instagram"><i class="fa fa-instagram"></i></a>
-              <a href="#" class="linkedin"><i class="fa fa-linkedin"></i></a>
-      -->
     </div>
   </div>
 </section>
