ISIS-2957 set ActionPrompt height, remove library target plain, CorsHttpRequest introduced, fix empty types in LogEntry, ActionDispatcher passed in with ExecuteAllMenubarActions

--- a/incubator/clients/kroviz/src/main/web/index.html
+++ b/incubator/clients/kroviz/src/main/web/index.html
@@ -23,5 +23,7 @@
 	OF ANY KIND, either express or implied. See the License for the specific
 	language governing permissions and limitations under the License. -->
 <div id="kroviz"></div>
+<!-- used for CORS workaround -->
+<iframe id="iframe"></iframe>
 </body>
 </html>
