ISIS-3039: reinstate abandoned full-cal config settings

--- a/extensions/vw/fullcalendar/wkt-vwr/src/main/java/org/apache/isis/extensions/fullcalendar/wkt/viewer/calendarable/CalendarableCollectionAsFullCalendar.html
+++ b/extensions/vw/fullcalendar/wkt-vwr/src/main/java/org/apache/isis/extensions/fullcalendar/wkt/viewer/calendarable/CalendarableCollectionAsFullCalendar.html
@@ -24,7 +24,7 @@
                 <div wicket:id="feedback"></div>
                 <ul wicket:id="selector" class="selector"></ul>
                 <div wicket:id="fullCalendar"></div>
-<!--                 <div id="loading">Loading...</div> -->
+                <div id="fullCalendar-loading">Loading...</div>
             </div>
         </wicket:panel>
     </body>
