--- a/core/metamodel/src/main/java/org/apache/isis/core/metamodel/inspect/model/icons.html
+++ b/core/metamodel/src/main/java/org/apache/isis/core/metamodel/inspect/model/icons.html
@@ -50,9 +50,12 @@
 		<li><a href="FacetNode.svg" class="icon-and-label"><img src="FacetNode.svg" class="icon-image-sm"><span>FacetNode.svg</span></a></li>
 		<li><a href="FacetAttrNode.svg" class="icon-and-label"><img src="FacetAttrNode.svg" class="icon-image-sm"><span>FacetAttrNode.svg</span></a></li>
 		<li><a href="ActionNode.svg" class="icon-and-label"><img src="ActionNode.svg" class="icon-image-sm"><span>ActionNode.svg</span></a></li>
+		<li><a href="ActionNode-mixedin.svg" class="icon-and-label"><img src="ActionNode-mixedin.svg" class="icon-image-sm"><span>ActionNode-mixedin.svg</span></a></li>
 		<li><a href="ParameterNode.svg" class="icon-and-label"><img src="ParameterNode.svg" class="icon-image-sm"><span>ParameterNode.svg</span></a></li>
 		<li><a href="PropertyNode.svg" class="icon-and-label"><img src="PropertyNode.svg" class="icon-image-sm"><span>PropertyNode.svg</span></a></li>
+		<li><a href="PropertyNode-mixedin.svg" class="icon-and-label"><img src="PropertyNode-mixedin.svg" class="icon-image-sm"><span>PropertyNode-mixedin.svg</span></a></li>
 		<li><a href="CollectionNode.svg" class="icon-and-label"><img src="CollectionNode.svg" class="icon-image-sm"><span>CollectionNode.svg</span></a></li>
+		<li><a href="CollectionNode-mixedin.svg" class="icon-and-label"><img src="CollectionNode-mixedin.svg" class="icon-image-sm"><span>CollectionNode-mixedin.svg</span></a></li>
 	</ul>
   
 	<h1>32x32</h1>
@@ -62,9 +65,12 @@
 		<li><a href="FacetNode.svg" class="icon-and-label"><img src="FacetNode.svg" class="icon-image"><span>FacetNode.svg</span></a></li>
 		<li><a href="FacetAttrNode.svg" class="icon-and-label"><img src="FacetAttrNode.svg" class="icon-image"><span>FacetAttrNode.svg</span></a></li>
 		<li><a href="ActionNode.svg" class="icon-and-label"><img src="ActionNode.svg" class="icon-image"><span>ActionNode.svg</span></a></li>
+		<li><a href="ActionNode-mixedin.svg" class="icon-and-label"><img src="ActionNode-mixedin.svg" class="icon-image"><span>ActionNode-mixedin.svg</span></a></li>
 		<li><a href="ParameterNode.svg" class="icon-and-label"><img src="ParameterNode.svg" class="icon-image"><span>ParameterNode.svg</span></a></li>
 		<li><a href="PropertyNode.svg" class="icon-and-label"><img src="PropertyNode.svg" class="icon-image"><span>PropertyNode.svg</span></a></li>
+		<li><a href="PropertyNode-mixedin.svg" class="icon-and-label"><img src="PropertyNode-mixedin.svg" class="icon-image"><span>PropertyNode-mixedin.svg</span></a></li>
 		<li><a href="CollectionNode.svg" class="icon-and-label"><img src="CollectionNode.svg" class="icon-image"><span>CollectionNode.svg</span></a></li>
+		<li><a href="CollectionNode-mixedin.svg" class="icon-and-label"><img src="CollectionNode-mixedin.svg" class="icon-image"><span>CollectionNode-mixedin.svg</span></a></li>
 	</ul>
   </body>
 </html>
