Various fixes to error page rendering

--- a/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/errors/ExceptionStackTracePanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/isis/viewer/wicket/ui/errors/ExceptionStackTracePanel.html
@@ -36,7 +36,7 @@
                         <div class="card-body" wicket:id="ticketMarkup">[ticket details]</div>
                         <div class="card-body">
                             <div class="form-group">
-                                <button type="submit" wicket:id="continueButton" class="btn btn-primary">Continue</button>
+                                <a wicket:id="continueButton" class="btn btn-primary">Continue</a>
                             </div>
                         </div>
                     </div>
