--- a/core/metamodel/src/main/java/org/apache/isis/core/metamodel/inspect/model/icons.html
+++ b/core/metamodel/src/main/java/org/apache/isis/core/metamodel/inspect/model/icons.html
@@ -1,3 +1,23 @@
+<!--
+  ~ Licensed to the Apache Software Foundation (ASF) under one
+  ~ or more contributor license agreements.  See the NOTICE file
+  ~ distributed with this work for additional information
+  ~ regarding copyright ownership.  The ASF licenses this file
+  ~ to you under the Apache License, Version 2.0 (the
+  ~ "License"); you may not use this file except in compliance
+  ~ with the License.  You may obtain a copy of the License at
+  ~
+  ~        http://www.apache.org/licenses/LICENSE-2.0
+  ~
+  ~ Unless required by applicable law or agreed to in writing,
+  ~ software distributed under the License is distributed on an
+  ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+  ~ KIND, either express or implied.  See the License for the
+  ~ specific language governing permissions and limitations
+  ~ under the License.
+  ~
+  -->
+
 <html>
 <!--
   Licensed to the Apache Software Foundation (ASF) under one
@@ -7,9 +27,9 @@
   to you under the Apache License, Version 2.0 (the
   "License"); you may not use this file except in compliance
   with the License.  You may obtain a copy of the License at
-  
+
          http://www.apache.org/licenses/LICENSE-2.0
-         
+
   Unless required by applicable law or agreed to in writing,
   software distributed under the License is distributed on an
   "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
@@ -42,7 +62,7 @@
 	</style>
   </head>
   <body>
-  
+
   	<h1>24x24</h1>
 	<ul>
 		<li><a href="TypeNode.svg" class="icon-and-label"><img src="TypeNode.svg" class="icon-image-sm"><span>TypeNode.svg</span></a></li>
@@ -57,7 +77,7 @@
 		<li><a href="CollectionNode.svg" class="icon-and-label"><img src="CollectionNode.svg" class="icon-image-sm"><span>CollectionNode.svg</span></a></li>
 		<li><a href="CollectionNode-mixedin.svg" class="icon-and-label"><img src="CollectionNode-mixedin.svg" class="icon-image-sm"><span>CollectionNode-mixedin.svg</span></a></li>
 	</ul>
-  
+
 	<h1>32x32</h1>
 	<ul>
 		<li><a href="TypeNode.svg" class="icon-and-label"><img src="TypeNode.svg" class="icon-image"><span>TypeNode.svg</span></a></li>
