--- a/antora/supplemental-ui/index.html
+++ b/antora/supplemental-ui/index.html
@@ -121,7 +121,7 @@
             <li><a href="docs/latest/starters/about.html">Starter Apps</a></li>
             <li><a href="docs/latest/landing-page/guides.html">Guides</a></li>
             <li><a href="docs/latest/landing-page/components.html">Components</a></li>
-            <li><a href="docs/latest/landing-page/libraries.html">Libraries</a></li>
+            <li><a href="docs/latest/landing-page/catalogs.html">Catalogs</a></li>
             <li><a href="docs/latest/landing-page/releases.html">Releases</a></li>
           </ul>
         </li>
