ISIS-3206: [Metamodel] adds rendering for annotation nodes in Inspect MM View

--- a/core/metamodel/src/main/java/org/apache/isis/core/metamodel/inspect/model/icons.html
+++ b/core/metamodel/src/main/java/org/apache/isis/core/metamodel/inspect/model/icons.html
@@ -65,6 +65,7 @@
 
   	<h1>24x24</h1>
 	<ul>
+		<li><a href="AnnotationNode.svg" class="icon-and-label"><img src="AnnotationNode.svg" class="icon-image-sm"><span>Annotation.svg</span></a></li>
 		<li><a href="TypeNode.svg" class="icon-and-label"><img src="TypeNode.svg" class="icon-image-sm"><span>TypeNode.svg</span></a></li>
 		<li><a href="FacetGroupNode.svg" class="icon-and-label"><img src="FacetGroupNode.svg" class="icon-image-sm"><span>FacetGroupNode.svg</span></a></li>
 		<li><a href="FacetNode.svg" class="icon-and-label"><img src="FacetNode.svg" class="icon-image-sm"><span>FacetNode.svg</span></a></li>
@@ -80,6 +81,7 @@
 
 	<h1>32x32</h1>
 	<ul>
+		<li><a href="AnnotationNode.svg" class="icon-and-label"><img src="AnnotationNode.svg" class="icon-image"><span>Annotation.svg</span></a></li>
 		<li><a href="TypeNode.svg" class="icon-and-label"><img src="TypeNode.svg" class="icon-image"><span>TypeNode.svg</span></a></li>
 		<li><a href="FacetGroupNode.svg" class="icon-and-label"><img src="FacetGroupNode.svg" class="icon-image"><span>FacetGroupNode.svg</span></a></li>
 		<li><a href="FacetNode.svg" class="icon-and-label"><img src="FacetNode.svg" class="icon-image"><span>FacetNode.svg</span></a></li>
