ISIS-3213: removes logos from home page for the 'built with' frameworks
... to conform with https://apache.org/foundation/marks/linking#projectthanks

--- a/antora/supplemental-ui/index.html
+++ b/antora/supplemental-ui/index.html
@@ -484,37 +484,43 @@
 
         <div class="col-lg-4">
           <div class="box wow fadeInLeft" data-wow-delay="0.1s">
-            <p class="description"><a href="https://spring.io/projects/spring-boot">Spring Boot</a> makes it easy to create stand-alone, production-grade Spring based Applications that you can "just run".</p>
+            <div class="pic"><a href="https://spring.io/projects/spring-boot">Spring Boot</a></div>
+            <p class="description">... to create stand-alone, production-grade Spring based Applications.</p>
           </div>
         </div>
 
         <div class="col-lg-4">
           <div class="box wow fadeInLeft">
-            <p class="description"><a href="https://wicket.apache.org">Apache Wicket™<a/> is an open source Java component oriented web application framework that powers thousands of web applications and web sites.</p>
+            <div class="pic"><a href="https://wicket.apache.org">Apache Wicket™<a/></div>
+            <p class="description">... is an open source Java component oriented web application framework that powers thousands of web applications and web sites.</p>
           </div>
         </div>
 
         <div class="col-lg-4">
           <div class="box wow fadeInRight">
-            <p class="description"><a href="https://resteasy.github.io">RESTEasy</a> is a JBoss project that provides various frameworks to help you build RESTful Web Services and RESTful Java applications.</p>
+            <div class="pic"><a href="https://resteasy.github.io">RESTEasy</a></div>
+            <p class="description">... a JBoss project that provides various frameworks to help you build RESTful Web Services and RESTful Java applications.</p>
           </div>
         </div>
 
         <div class="col-lg-4">
           <div class="box wow fadeInLeft" data-wow-delay="0.1s">
-            <p class="description"><a href="https://www.eclipse.org/eclipselink/">EclipseLink</a>, the reference implementation for JPA, is a comprehensive open-source Java persistence solution addressing relational, XML, and database web services.</p>
+            <div class="pic"><a href="https://www.eclipse.org/eclipselink/">EclipseLink</a></div>
+            <p class="description">... the reference implementation for JPA, a comprehensive open-source Java persistence solution addressing relational, XML, and database web services.</p>
           </div>
         </div>
 
         <div class="col-lg-4">
           <div class="box wow fadeInLeft" data-wow-delay="0.2s">
-            <p class="description"><a href="https://www.datanucleus.org">DataNucleus AccessPlatform</a>, the reference implementation for JDO, provides persistence and retrieval of data to a range of datastores using a range of APIs, with a range of query languages.</p>
+            <div class="pic"><a href="https://www.datanucleus.org">DataNucleus AccessPlatform</a></div>
+            <p class="description">... the reference implementation for JDO, provides persistence and retrieval of data to a range of datastores using a range of APIs, with a range of query languages.</p>
           </div>
         </div>
 
         <div class="col-lg-4">
-            <div class="pic"><img src="_/img/home/built-with/byte-buddy.png" height="105px" alt=""></div>
-            <p class="description"><a href="https://bytebuddy.net">Byte Buddy</a> is a code generation and manipulation library for creating and modifying Java classes during the runtime of a Java application.</p>
+          <div class="box wow fadeInLeft" data-wow-delay="0.2s">
+            <div class="pic"><a href="https://bytebuddy.net">Byte Buddy</a></div>
+            <p class="description">... a code generation and manipulation library for creating and modifying Java classes during the runtime of a Java application.</p>
           </div>
         </div>
 
