ISIS-3213: removes logos from home page for the 'built with' frameworks
... to conform with https://apache.org/foundation/marks/linking#projectthanks (2)

--- a/antora/supplemental-ui/index.html
+++ b/antora/supplemental-ui/index.html
@@ -499,7 +499,7 @@
         <div class="col-lg-4">
           <div class="box wow fadeInRight">
             <div class="pic"><a href="https://resteasy.github.io">RESTEasy</a></div>
-            <p class="description">... a JBoss project that provides various frameworks to help you build RESTful Web Services and RESTful Java applications.</p>
+            <p class="description">... a portable implementation of the JAX-RS specification for RESTful APIs</p>
           </div>
         </div>
 
