--- a/antora/supplemental-ui/index.html
+++ b/antora/supplemental-ui/index.html
@@ -70,8 +70,8 @@
       -->
     </div>
     <div class="social-links float-right">
-      <a href="docs/2.0.0-M9/support/mailing-list.html" class="email"><i class="fa fa-at"></i></a>
-      <a href="docs/2.0.0-M9/support/slack-channel.html" class="slack"><i class="fa fa-slack"></i></a>
+      <a href="docs/latest/support/mailing-list.html" class="email"><i class="fa fa-at"></i></a>
+      <a href="docs/latest/support/slack-channel.html" class="slack"><i class="fa fa-slack"></i></a>
       <a href="https://issues.apache.org/jira/secure/RapidBoard.jspa?rapidView=87" class="bug"><i class="fa fa-bug"></i></a>
       <a href="https://stackoverflow.com/questions/tagged/isis" class="stackoverflow"><i class="fa fa-stack-overflow"></i></a>
       <a href="https://twitter.com/ApacheIsis" class="twitter"><i class="fa fa-twitter"></i></a>
@@ -114,15 +114,15 @@
         </li>
         <li><a href="#call-to-action">Quick Start</a></li>
         <li class="menu-has-children">
-          <a href="docs/2.0.0-M9/about.html">Docs</a>
+          <a href="docs/2.0.0-M8/about.html">Docs</a>
           <ul>
-            <li><a href="docs/2.0.0-M9/about.html">Table of Contents</a></li>
+            <li><a href="docs/2.0.0-M8/about.html">Table of Contents</a></li>
             <li><hr/></li>
-            <li><a href="docs/2.0.0-M9/starters/about.html">Starter Apps</a></li>
-            <li><a href="docs/2.0.0-M9/landing-page/guides.html">Guides</a></li>
-            <li><a href="docs/2.0.0-M9/landing-page/components.html">Components</a></li>
-            <li><a href="docs/2.0.0-M9/landing-page/catalogs.html">Catalogs</a></li>
-            <li><a href="docs/2.0.0-M9/landing-page/releases.html">Releases</a></li>
+            <li><a href="docs/2.0.0-M8/starters/about.html">Starter Apps</a></li>
+            <li><a href="docs/2.0.0-M8/landing-page/guides.html">Guides</a></li>
+            <li><a href="docs/2.0.0-M8/landing-page/components.html">Components</a></li>
+            <li><a href="docs/2.0.0-M8/landing-page/catalogs.html">Catalogs</a></li>
+            <li><a href="docs/2.0.0-M8/landing-page/releases.html">Releases</a></li>
           </ul>
         </li>
         <li><a href="#contact">Support</a></li>
@@ -211,7 +211,7 @@
     <div class="container">
       <div class="section-header">
         <h2>Quotes</h2>
-        <p>We gathered together some quotes from current users of the framework.  You can find out who said what <a href="docs/2.0.0-M9/quotes/quotes.html">here</a>.</p>
+        <p>We gathered together some quotes from current users of the framework.  You can find out who said what <a href="docs/2.0.0-M8/quotes/quotes.html">here</a>.</p>
       </div>
       <div class="owl-carousel testimonials-carousel">
 
@@ -542,13 +542,13 @@
           <div class="row">
             <div class="col-lg-6 text-left text-lg-left">
               <p class="cta-text text-center" style="margin-block-end: 0; ">
-                Learn about Apache Isis™ by running the minimal <a href="docs/2.0.0-M9/starters/helloworld.html">helloworld</a> starter&nbsp;app.
+                Learn about Apache Isis™ by running the minimal <a href="docs/2.0.0-M8/starters/helloworld.html">helloworld</a> starter&nbsp;app.
                 You can see the app running <a href="https://helloworld.jdo.isis.incode.work/" target="_blank">here (jdo)</a> and <a href="https://helloworld.jpa.isis.incode.work/" target="_blank">here (jpa)</a>.
               </p>
             </div>
             <div class="col-lg-6 text-left text-lg-left">
               <p class="cta-text text-center" style="margin-block-end: 0; ">
-                Develop your own Apache Isis™ app with the structured <a href="docs/2.0.0-M9/starters/simpleapp.html">simpleapp</a> starter&nbsp;app.
+                Develop your own Apache Isis™ app with the structured <a href="docs/2.0.0-M8/starters/simpleapp.html">simpleapp</a> starter&nbsp;app.
                 You can see the app running <a href="https://simpleapp.jdo.isis.incode.work/" target="_blank">here (jdo)</a> and <a href="https://simpleapp.jpa.isis.incode.work/" target="_blank">here (jpa)</a>.
               </p>
             </div>
@@ -697,7 +697,7 @@ mvn -pl webapp jetty:run</pre>
           <div class="contact-email">
             <i class="ion-ios-filing-outline"></i>
             <h3>Slack</h3>
-            <p><a href="docs/2.0.0-M9/support/slack-channel.html">Join #apache-isis <br/>(on the ASF slack workspace)</a></p>
+            <p><a href="docs/2.0.0-M8/support/slack-channel.html">Join #apache-isis <br/>(on the ASF slack workspace)</a></p>
           </div>
         </div>
 
