ISIS-3142: renaming: batch process all .html/.thtml files (except antora/*)

--- a/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/pages/login/CausewaySignInPanel.html
+++ b/viewers/wicket/ui/src/main/java/org/apache/causeway/viewer/wicket/ui/pages/login/CausewaySignInPanel.html
@@ -23,11 +23,11 @@
             <form wicket:id="signInForm" role="form">
                 <div class="form-group mb-3">
                     <label wicket:for="username"><wicket:message key="usernameLabel"/></label>
-                    <input type="text" class="form-control isis-username" wicket:id="username" placeholder="Enter username"/>
+                    <input type="text" class="form-control causeway-username" wicket:id="username" placeholder="Enter username"/>
                 </div>
                 <div class="form-group mb-3">
                     <label wicket:for="password"><wicket:message key="passwordLabel"/></label>
-                    <input type="password" class="form-control isis-password" wicket:id="password" placeholder="Enter password"/>
+                    <input type="password" class="form-control causeway-password" wicket:id="password" placeholder="Enter password"/>
                 </div>
                 <div class="form-group mb-3">
                     <label wicket:for="timezone"><wicket:message key="timezoneLabel"/></label>
