--- a/antora/supplemental-ui/index.html
+++ b/antora/supplemental-ui/index.html
@@ -540,16 +540,24 @@
           <h3 class="cta-title">Quick Start</h3>
 
           <div class="row">
+            <div class="col-lg-12 text-left text-lg-left">
+              <p class="cta-text text-center" style="margin-block-end: 0; ">
+                Prereqs: Java 11 and Maven 3.6+.  <br/>
+                We recommend you try out using Linux, MacOS or WSL2 <br/>
+                (to <a href="https://github.com/spring-projects/spring-boot/issues/17766">avoid exceeding</a> Windows' limits due to classpath length).
+              </p>
+              <br/>
+            </div>
             <div class="col-lg-6 text-left text-lg-left">
               <p class="cta-text text-center" style="margin-block-end: 0; ">
                 Learn about Apache Isis™ by running the minimal <a href="docs/latest/starters/helloworld.html">helloworld</a> starter&nbsp;app.
-                You can see the app running <a href="https://helloworld.jdo.isis.incode.work/" target="_blank">here (jdo)</a> and <a href="https://helloworld.jpa.isis.incode.work/" target="_blank">here (jpa)</a>.
+                You can see the app running <a href="https://helloworld.jdo.isis.incode.work/" target="_blank">here (jdo)</a> or <a href="https://helloworld.jpa.isis.incode.work/" target="_blank">here (jpa)</a>.
               </p>
             </div>
             <div class="col-lg-6 text-left text-lg-left">
               <p class="cta-text text-center" style="margin-block-end: 0; ">
                 Develop your own Apache Isis™ app with the structured <a href="docs/latest/starters/simpleapp.html">simpleapp</a> starter&nbsp;app.
-                You can see the app running <a href="https://simpleapp.jdo.isis.incode.work/" target="_blank">here (jdo)</a> and <a href="https://simpleapp.jpa.isis.incode.work/" target="_blank">here (jpa)</a>.
+                You can see the app running <a href="https://simpleapp.jdo.isis.incode.work/" target="_blank">here (jdo)</a> or <a href="https://simpleapp.jpa.isis.incode.work/" target="_blank">here (jpa)</a>.
               </p>
             </div>
           </div>
@@ -562,7 +570,7 @@ BRANCH=jdo
 curl https://codeload.github.com/apache/$APP/zip/$BRANCH | jar xv
 cd $APP-$BRANCH
 
-mvn clean install
+mvn clean install -Dskip.staging -Dskip.nightly
 mvn spring-boot:run</pre>
               </p>
             </div>
@@ -574,7 +582,7 @@ BRANCH=jdo
 curl https://codeload.github.com/apache/$APP/zip/$BRANCH | jar xv
 cd $APP-$BRANCH
 
-mvn clean install
+mvn clean install -Dskip.staging -Dskip.nightly
 mvn -pl webapp spring-boot:run</pre>
               </p>
             </div>
@@ -600,7 +608,7 @@ BRANCH=jpa
 curl https://codeload.github.com/apache/$APP/zip/$BRANCH | jar xv
 cd $APP-$BRANCH
 
-mvn clean install
+mvn clean install -Dskip.staging -Dskip.nightly
 mvn spring-boot:run</pre>
               </p>
             </div>
@@ -612,7 +620,7 @@ BRANCH=jpa
 curl https://codeload.github.com/apache/$APP/zip/$BRANCH | jar xv
 cd $APP-$BRANCH
 
-mvn clean install
+mvn clean install -Dskip.staging -Dskip.nightly
 mvn -pl webapp spring-boot:run</pre>
               </p>
             </div>
@@ -632,7 +640,7 @@ mvn -pl webapp spring-boot:run</pre>
           <div class="row">
             <div class="col-lg-12 text-left text-lg-left">
               <p class="cta-text text-center" style="margin-block-end: 0; margin-top: 20px;">
-                You can also explore the Apache Isis programming model through the demo app, running <a href="https://demo-wicket.isis.incode.work/" target="_blank">here</a>.
+                You can also explore the Apache Isis programming model through the demo app, running <a href="https://demo-wicket.jdo.isis.incode.work/" target="_blank">here (jdo)</a> or <a href="https://demo-wicket.jpa.isis.incode.work/" target="_blank">here (jpa)</a>.
               </p>
             </div>
           </div>
