ISIS-3255: improves index.html a tiny bit

--- a/antora/supplemental-ui/index.html
+++ b/antora/supplemental-ui/index.html
@@ -551,13 +551,13 @@
             <div class="col-lg-6 text-left text-lg-left">
               <p class="cta-text text-center" style="margin-block-end: 0; ">
                 Learn about Apache Isis™ by running the minimal <a href="docs/latest/starters/helloworld.html">helloworld</a> starter&nbsp;app.
-                You can see the app running <a href="https://helloworld-jdo.apps.causeway.dev/" target="_blank">here (jdo)</a> or <a href="https://helloworld-jpa-snapshot.apps.causeway.dev/" target="_blank">here (jpa)</a>.
+                You can see the app running <a href="https://helloworld-jpa-snapshot.apps.causeway.dev/" target="_blank">here (jpa)</a> or <a href="https://helloworld-jdo-snapshot.apps.causeway.dev/" target="_blank">here (jdo)</a>.
               </p>
             </div>
             <div class="col-lg-6 text-left text-lg-left">
               <p class="cta-text text-center" style="margin-block-end: 0; ">
                 Develop your own Apache Isis™ app with the structured <a href="docs/latest/starters/simpleapp.html">simpleapp</a> starter&nbsp;app.
-                You can see the app running <a href="https://simpleapp-jdo.apps.causeway.dev/" target="_blank">here (jdo)</a> or <a href="https://simpleapp-jpa-snapshot.apps.causeway.dev/" target="_blank">here (jpa)</a>.
+                You can see the app running <a href="https://simpleapp-jpa-snapshot.apps.causeway.dev/" target="_blank">here (jpa)</a> or <a href="https://simpleapp-jdo-snapshot.apps.causeway.dev/" target="_blank">here (jdo)</a>.
               </p>
             </div>
           </div>
@@ -640,50 +640,10 @@ mvn -pl webapp spring-boot:run</pre>
           <div class="row">
             <div class="col-lg-12 text-left text-lg-left">
               <p class="cta-text text-center" style="margin-block-end: 0; margin-top: 20px;">
-                You can also explore the Apache Isis programming model through the demo app, running <a href="https://demo-wicket-jdo-snapshot.apps.causeway.dev/" target="_blank">here (jdo)</a> or <a href="https://demo-wicket-jpa-snapshot.apps.causeway.dev/" target="_blank">here (jpa)</a>.
+                You can also explore the Apache Isis programming model through the demo app, running <a href="https://demo-wicket-jpa-snapshot.apps.causeway.dev/" target="_blank">here (jpa)</a> or <a href="https://demo-wicket-jdo-snapshot.apps.causeway.dev/" target="_blank">here (jdo)</a>.
               </p>
             </div>
           </div>
-
-<!--
-          <div class="row">
-            <p class="cta-text text-center" style="margin-block-end: 0; margin-left: 20px; margin-top: 20px;">
-              If you want to use the previous 1.x version, you can use these Maven archetypes.
-            </p>
-            <div class="col-lg-6 text-left text-lg-left">
-              <p>
-                <pre>
-mvn archetype:generate  \
-    -D archetypeGroupId=org.apache.isis.archetype \
-    -D archetypeArtifactId=helloworld-archetype \
-    -D archetypeVersion=1.17.0 \
-    -D groupId=com.mycompany \
-    -D artifactId=myapp \
-    -D version=1.0-SNAPSHOT \
-    -B
-
-mvn clean install
-mvn jetty:run</pre>
-              </p>
-            </div>
-            <div class="col-lg-6 text-center text-lg-left">
-              <p>
-                <pre>
-mvn archetype:generate  \
-    -D archetypeGroupId=org.apache.isis.archetype \
-    -D archetypeArtifactId=$APP-archetype \
-    -D archetypeVersion=1.17.0 \
-    -D groupId=com.mycompany \
-    -D artifactId=myapp \
-    -D version=1.0-SNAPSHOT \
-    -B
-
-mvn clean install
-mvn -pl webapp jetty:run</pre>
-              </p>
-            </div>
-        </div>
--->
         </div>
       </div>
     </div>
