--- a/antora/supplemental-ui/index.html
+++ b/antora/supplemental-ui/index.html
@@ -552,12 +552,14 @@
               <p class="cta-text text-center" style="margin-block-end: 0; ">
                 Learn about Apache Isis™ by running the minimal <a href="docs/latest/starters/helloworld.html">helloworld</a> starter&nbsp;app.
                 You can see the app running <a href="https://helloworld-jpa-snapshot.apps.causeway.dev/" target="_blank">here (jpa)</a> or <a href="https://helloworld-jdo-snapshot.apps.causeway.dev/" target="_blank">here (jdo)</a>.
+                (These scale to zero when not in use, so please allow up to a minute for them to restart if necessary).
               </p>
             </div>
             <div class="col-lg-6 text-left text-lg-left">
               <p class="cta-text text-center" style="margin-block-end: 0; ">
                 Develop your own Apache Isis™ app with the structured <a href="docs/latest/starters/simpleapp.html">simpleapp</a> starter&nbsp;app.
                 You can see the app running <a href="https://simpleapp-jpa-snapshot.apps.causeway.dev/" target="_blank">here (jpa)</a> or <a href="https://simpleapp-jdo-snapshot.apps.causeway.dev/" target="_blank">here (jdo)</a>.
+                (These scale to zero when not in use, so please allow up to a minute for them to restart if necessary).
               </p>
             </div>
           </div>
@@ -641,6 +643,7 @@ mvn -pl webapp spring-boot:run</pre>
             <div class="col-lg-12 text-left text-lg-left">
               <p class="cta-text text-center" style="margin-block-end: 0; margin-top: 20px;">
                 You can also explore the Apache Isis programming model through the demo app, running <a href="https://demo-wicket-jpa-snapshot.apps.causeway.dev/" target="_blank">here (jpa)</a> or <a href="https://demo-wicket-jdo-snapshot.apps.causeway.dev/" target="_blank">here (jdo)</a>.
+                (These scale to zero when not in use, so please allow up to a minute for them to restart if necessary).
               </p>
             </div>
           </div>
