CAUSEWAY-3222: fix missing css ref in site index.thml

--- a/antora/supplemental-ui/index.html
+++ b/antora/supplemental-ui/index.html
@@ -47,6 +47,8 @@
 
   <!-- Main Stylesheet File -->
   <link href="_/css/home/style.css" rel="stylesheet">
+  <!-- Custom Stylesheet File -->
+  <link href="_/css/site-custom.css" rel="stylesheet">
 
   <!-- =======================================================
     Theme Name: Reveal
