--- a/antora/supplemental-ui/index.html
+++ b/antora/supplemental-ui/index.html
@@ -159,8 +159,9 @@
     -->
     <div>
       <p>
-        <a href="#testimonials" class="btn-projects scrollto">Reviews</a>
+        <a href="#testimonials" class="btn-projects scrollto">&nbsp;Reviews&nbsp;</a>
         <a href="#call-to-action" class="btn-get-started scrollto">Quick Start</a>
+        <a href="docs/latest/about.html" class="btn-docs">&nbsp;&nbsp;&nbsp;Docs&nbsp;&nbsp;&nbsp;</a>
       </p>
     </div>
   </div>
