CAUSEWAY-3222: adds titles to social-links

--- a/antora/supplemental-ui/index.html
+++ b/antora/supplemental-ui/index.html
@@ -69,11 +69,11 @@
       <i class="fa fa-envelope-o"></i> <a href="mailto:users@causeway.apache.org">users@causeway.apache.org</a>
     </div>
     <div class="social-links float-right">
-      <a href="docs/latest/support/mailing-list.html" class="email"><i class="fa fa-at"></i></a>
-      <a href="docs/latest/support/slack-channel.html" class="slack"><i class="fa fa-slack"></i></a>
-      <a href="https://issues.apache.org/jira/secure/RapidBoard.jspa?rapidView=87" class="bug"><i class="fa fa-bug"></i></a>
-      <a href="https://stackoverflow.com/questions/tagged/causeway" class="stackoverflow"><i class="fa fa-stack-overflow"></i></a>
-      <a href="https://twitter.com/ApacheCauseway" class="twitter"><i class="fa fa-twitter"></i></a>
+      <a title="Mailing List" href="docs/latest/support/mailing-list.html" class="email"><i class="fa fa-at"></i></a>
+      <a title="Slack Channel" href="docs/latest/support/slack-channel.html" class="slack"><i class="fa fa-slack"></i></a>
+      <a title="Bug Reports (Jira)" href="https://issues.apache.org/jira/secure/RapidBoard.jspa?rapidView=87" class="bug"><i class="fa fa-bug"></i></a>
+      <a title="Stackoverflow" href="https://stackoverflow.com/questions/tagged/causeway" class="stackoverflow"><i class="fa fa-stack-overflow"></i></a>
+      <a title="Twitter" href="https://twitter.com/ApacheCauseway" class="twitter"><i class="fa fa-twitter"></i></a>
     </div>
   </div>
 </section>
