CAUSEWAY-3147 : updates binary docs with new name

--- a/antora/supplemental-ui/index.html
+++ b/antora/supplemental-ui/index.html
@@ -191,14 +191,14 @@
           <h3><b>Apache Causeway™ enables domain-driven application development by automatically generating a UI for your Spring Boot™ apps.  That means:</b></h3>
 
           <ul>
-            <li><i class="ion-android-checkmark-circle"></i><span><b>Productivity</b> - the app is mostly business logic, with costly UI code eliminated.</span></li>
-            <li><i class="ion-android-checkmark-circle"></i><span><b>Discovery</b> - the business domain experts and the techies can work hand-in-hand to understand the problem space and then the solution space.</span></li>
-            <li><i class="ion-android-checkmark-circle"></i><span><b>Ease of Use</b> - business users will find the app easy to learn as the business concepts are front and center</span></li>
-            <li><i class="ion-android-checkmark-circle"></i><span><b>Simple Integration</b> - the framework automatically publishes domain events for async integration, and automatically provides a REST API for sync integration.</span></li>
-            <li><i class="ion-android-checkmark-circle"></i><span><b>Clean Architecture</b> - the framework ensures a clear separation of concerns within your app's internal architecture</span></li>
+            <li><i class="ion-android-checkmark-circle"></i><span><b>Productivity</b> - your app is mostly business logic, with costly UI code eliminated.</span></li>
+            <li><i class="ion-android-checkmark-circle"></i><span><b>Discovery</b> - you can work hand-in-hand with your business domain experts, to understand the problem space and to explore and then select a solution within the solution space.</span></li>
+            <li><i class="ion-android-checkmark-circle"></i><span><b>Ease of Use</b> - your business users will find the app easy to learn, with the business concepts front and center</span></li>
+            <li><i class="ion-android-checkmark-circle"></i><span><b>Simple Integration</b> - you can integrate easily with other systems, through domain events published automatically for async integration, and with an automatically provided REST API for sync integration.</span></li>
+            <li><i class="ion-android-checkmark-circle"></i><span><b>Clean Architecture</b> - you will find it easy to maintain a clear separation of concerns within your app's internal architecture</span></li>
           </ul>
 
-          <p>And because Apache Causeway™ is <b>open source</b>, built on industry / de-facto standards such as Spring Boot™, there's no vendor lock-in.</p>
+          <p>And because Apache Causeway™ is <b>open source</b>, running on top of Spring Boot™, you won't be locked into a vendor nor even the framework; the clean separation of concerns means you could even lift-n-shift your domain logic to run on some other framework if need be.</p>
         </div>
       </div>
 
