--- a/antora/supplemental-ui/index.html
+++ b/antora/supplemental-ui/index.html
@@ -96,22 +96,15 @@
 
     <nav id="nav-menu-container">
       <ul class="nav-menu">
-        <li class="menu-active"><a href="#body">Home</a></li>
-        <li><a href="#why">Why?</a></li>
         <li class="menu-has-children">
-          <a href="#testimonials">What?</a>
+          <a href="#body">About</a>
           <ul>
-            <li><a href="#testimonials">Reviews</a></li>
-            <!--
-                        <li><a href="#portfolio">Examples</a></li>
-            -->
-          </ul>
-        </li>
-        <li class="menu-has-children">
-          <a href="#how-it-works">How?</a>
-          <ul>
-            <li><a href="#how-it-works">How it Works</a></li>
-            <li><a href="#services">Built with</a></li>
+            <li><a href="#why">Why?</a></li>
+            <li><a href="#testimonials">What do users say?</a></li>
+            <li><a href="#how-it-works">How does it work?</a></li>
+            <li><a href="#services">What's it built with?</a></li>
+            <li><a href="#call-to-action">Getting started</a></li>
+            <li><a href="#call-to-action">Support</a></li>
           </ul>
         </li>
         <li><a href="#call-to-action">Quick Start</a></li>
@@ -124,7 +117,15 @@
             <li><a href="docs/latest/landing-page/guides.html">Guides</a></li>
             <li><a href="docs/latest/landing-page/components.html">Components</a></li>
             <li><a href="docs/latest/landing-page/catalogs.html">Catalogs</a></li>
-            <li><a href="docs/latest/landing-page/releases.html">Releases</a></li>
+          </ul>
+        </li>
+        <li class="menu-has-children">
+          <a href="#">Download</a>
+          <ul>
+            <li><a href="#call-to-action">Quick Start</a></li>
+            <li><a href="docs/latest/downloads/how-to#formal-releases">Source Releases</a></li>
+            <li><a href="docs/latest/landing-page/releases.html">Binary Releases</a></li>
+            <li><a href="docs/latest/downloads/how-to#source-code">Source @ Github</a></li>
           </ul>
         </li>
         <li><a href="#contact">Support</a></li>
@@ -555,55 +556,17 @@
             <div class="col-lg-6 text-left text-lg-left">
               <p class="cta-text text-center" style="margin-block-end: 0; ">
                 Learn about Apache Causeway™ by running the minimal <a href="docs/latest/starters/helloworld.html">helloworld</a> starter&nbsp;app.
-                You can see the app running <a href="https://helloworld-jpa-snapshot.apps.causeway.dev/" target="_blank">here (jpa)</a> or <a href="https://helloworld-jdo-snapshot.apps.causeway.dev/" target="_blank">here (jdo)</a>.
+                You can see the app running <a href="https://helloworld-jpa-snapshot.apps.causeway.dev/" target="_blank">here (jpa)</a>.
                 <br/>
-                (These scale to zero when not in use, so please allow up to a minute for them to restart if necessary).
+                (The app scales to zero when not in use, so please allow up to a minute for it to restart if necessary).
               </p>
             </div>
             <div class="col-lg-6 text-left text-lg-left">
               <p class="cta-text text-center" style="margin-block-end: 0; ">
                 Develop your own Apache Causeway™ app with the structured <a href="docs/latest/starters/simpleapp.html">simpleapp</a> starter&nbsp;app.
-                You can see the app running <a href="https://simpleapp-jpa-snapshot.apps.causeway.dev/" target="_blank">here (jpa)</a> or <a href="https://simpleapp-jdo-snapshot.apps.causeway.dev/" target="_blank">here (jdo)</a>.
+                You can see the app running <a href="https://simpleapp-jpa-snapshot.apps.causeway.dev/" target="_blank">here (jpa)</a>.
                 <br/>
-                (These scale to zero when not in use, so please allow up to a minute for them to restart if necessary).
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-6 text-left text-lg-left">
-              <p>
-              <pre id="helloworld-jdo-text">
-APP=causeway-app-helloworld
-BRANCH=jdo
-curl https://codeload.github.com/apache/$APP/zip/$BRANCH | jar xv
-cd $APP-$BRANCH
-
-mvn clean install -Dskip.staging -Dskip.nightly
-mvn spring-boot:run</pre>
-              </p>
-            </div>
-            <div class="col-lg-6 text-left text-lg-left">
-              <p>
-              <pre id="simpleapp-jdo-text">
-APP=causeway-app-simpleapp
-BRANCH=jdo
-curl https://codeload.github.com/apache/$APP/zip/$BRANCH | jar xv
-cd $APP-$BRANCH
-
-mvn clean install -Dskip.staging -Dskip.nightly
-mvn -pl webapp spring-boot:run</pre>
-              </p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-lg-6 text-left text-lg-left">
-              <p class="cta-text text-center" style="margin-block-end: 0; margin-top: -20px;">
-                <span id="helloworld-jdo-copy" style="cursor: pointer;"><img src="_/img/home/clipboard-copy.png" width="16" height="16"/>&nbsp;&nbsp;Copy text for helloworld (jdo)</span>
-              </p>
-            </div>
-            <div class="col-lg-6 text-left text-lg-left">
-              <p class="cta-text text-center" style="margin-block-end: 0; margin-top: -20px;">
-                <span id="simpleapp-jdo-copy" style="cursor: pointer;"><img src="_/img/home/clipboard-copy.png" width="16" height="16"/>&nbsp;&nbsp;Copy text for simpleapp (jdo)</span>
+                (The app scales to zero when not in use, so please allow up to a minute for it to restart if necessary).
               </p>
             </div>
           </div>
@@ -646,11 +609,49 @@ mvn -pl webapp spring-boot:run</pre>
             </div>
           </div>
           <div class="row">
+            <div class="col-lg-6 text-left text-lg-left">
+              <p>
+              <pre id="helloworld-jdo-text">
+APP=causeway-app-helloworld
+BRANCH=jdo
+curl https://codeload.github.com/apache/$APP/zip/$BRANCH | jar xv
+cd $APP-$BRANCH
+
+mvn clean install -Dskip.staging -Dskip.nightly
+mvn spring-boot:run</pre>
+              </p>
+            </div>
+            <div class="col-lg-6 text-left text-lg-left">
+              <p>
+              <pre id="simpleapp-jdo-text">
+APP=causeway-app-simpleapp
+BRANCH=jdo
+curl https://codeload.github.com/apache/$APP/zip/$BRANCH | jar xv
+cd $APP-$BRANCH
+
+mvn clean install -Dskip.staging -Dskip.nightly
+mvn -pl webapp spring-boot:run</pre>
+              </p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-6 text-left text-lg-left">
+              <p class="cta-text text-center" style="margin-block-end: 0; margin-top: -20px;">
+                <span id="helloworld-jdo-copy" style="cursor: pointer;"><img src="_/img/home/clipboard-copy.png" width="16" height="16"/>&nbsp;&nbsp;Copy text for helloworld (jdo)</span>
+              </p>
+            </div>
+            <div class="col-lg-6 text-left text-lg-left">
+              <p class="cta-text text-center" style="margin-block-end: 0; margin-top: -20px;">
+                <span id="simpleapp-jdo-copy" style="cursor: pointer;"><img src="_/img/home/clipboard-copy.png" width="16" height="16"/>&nbsp;&nbsp;Copy text for simpleapp (jdo)</span>
+              </p>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-lg-12 text-left text-lg-left">
               <p class="cta-text text-center" style="margin-block-end: 0; margin-top: 20px;">
                 You can also explore the Apache Causeway™ programming model through the demo app, running <a href="https://demo-wicket-jpa-snapshot.apps.causeway.dev/" target="_blank">here (jpa)</a> or <a href="https://demo-wicket-jdo-snapshot.apps.causeway.dev/" target="_blank">here (jdo)</a>.
                 <br/>
-                (These scale to zero when not in use, so please allow up to a minute for them to restart if necessary).
+                (These apps scales to zero when not in use, so please allow up to a minute for them to restart if necessary).
               </p>
             </div>
           </div>
@@ -666,7 +667,8 @@ mvn -pl webapp spring-boot:run</pre>
     <div class="container">
       <div class="section-header">
         <h2>Support</h2>
-        <p>Apache projects use mailing lists for support.  You can subscribe by sending an email to the users list, or you can browse the archives.  If you find a problem, please raise a ticket on our JIRA, or ask a question on StackOverflow.</p>
+        <p>We provide support using either our Slack channel, or through mailing lists for support, use the links below to join.  Most users prefer to use Slack, but we always make formal announcements on the users list; you can also browse the mailing list archives.
+           If you find a problem, please raise a ticket on our JIRA, or ask a question on StackOverflow.</p>
       </div>
 
       <div class="row contact-info">
