--- a/antora/supplemental-ui/index.html
+++ b/antora/supplemental-ui/index.html
@@ -114,8 +114,9 @@
             <li><a href="docs/latest/about.html">Table of Contents</a></li>
             <li><hr/></li>
             <li><a href="docs/latest/landing-page/guides.html">Guides</a></li>
+            <li><a href="valuetypes/latest/about.html">Value Types</a></li>
             <li><a href="docs/latest/landing-page/components.html">Components</a></li>
-            <li><a href="docs/latest/landing-page/catalogs.html">Catalogs</a></li>
+            <li><a href="extensions/latest/about.html">Extensions</a></li>
           </ul>
         </li>
         <li class="menu-has-children">
