CAUSEWAY-3429 : adds search box to home page

--- a/antora/supplemental-ui/index.html
+++ b/antora/supplemental-ui/index.html
@@ -50,6 +50,9 @@
   <!-- Custom Stylesheet File -->
   <link href="_/css/site-custom.css" rel="stylesheet">
 
+  <!-- Algolia -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css"/>
+
   <!-- =======================================================
     Theme Name: Reveal
     Theme URL: https://bootstrapmade.com/reveal-bootstrap-corporate-template/
@@ -160,6 +163,11 @@
         <a href="#testimonials" class="btn-projects scrollto">&nbsp;Reviews&nbsp;</a>
         <a href="#call-to-action" class="btn-get-started scrollto">Quick Start</a>
         <a href="docs/latest/about.html" class="btn-docs">&nbsp;&nbsp;&nbsp;Docs&nbsp;&nbsp;&nbsp;</a>
+      </p>
+      <p>
+      <div class="nav-panel-search hide-for-print">
+        <input id="algolia-search-input" placeholder="Search"></span>
+      </div>
       </p>
     </div>
   </div>
