CAUSEWAY-2485: resurrects the customui for demo app

--- a/examples/demo/wicket/common/src/main/java/demoapp/webapp/wicket/common/featured/customui/WhereInTheWorldPanel.html
+++ b/examples/demo/wicket/common/src/main/java/demoapp/webapp/wicket/common/featured/customui/WhereInTheWorldPanel.html
@@ -51,7 +51,7 @@
                     <fieldset class="memberGroup" id="fieldSet-description">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <span class="panel-title">Description</span>
+                                <span class="panel-title"></span>
                             </div>
                             <div class="properties panel-body">
                                 <div>
